# lib/contracts.ts
@@ -1,7 +1,8 @@
 const solc = require("solc");
+import { findBestMatch } from "string-similarity";
 import { ethers } from "ethers";
 import chains from "@/lib/chains.json";
-import { ChainData, Contract } from "@/lib/types";
+import { ChainData, Contract, DeployResults } from "@/lib/types";
 
 type ContractsType = Contract[];
 
@@ -26,14 +27,20 @@ export const deployContract = async (
   name: string,
   chain: string,
   sourceCode: string
-): Promise<Contract | Error> => {
-  // get the chain object from the chains.json file
-  const chainData = <ChainData>(
-    chains.find((item) => item.name.toLowerCase() === chain.toLowerCase())
-  );
+): Promise<DeployResults> => {
+  // get the chain object from the chains.json file. Direct match || partial match
+  const chainData = <ChainData>(chains.find(
+    (item) => item.name.toLowerCase() === chain.toLowerCase()
+  ) ||
+    findBestMatch(
+      chain.toLowerCase(),
+      chains.map((item) => item.name.toLowerCase())
+    ).bestMatch.target);
 
   if (!chainData) {
-    return new Error("Chain not found");
+    const error = new Error(`Chain ${chain} not found`);
+    console.log(error);
+    throw error;
   }
 
   const fileName = (name ? name.replace(/[^a-z0-9]/gi, "_").toLowerCase() : "contract") + ".sol";
@@ -55,64 +62,82 @@ export const deployContract = async (
     },
   };
   const output = JSON.parse(solc.compile(JSON.stringify(input)));
+  if (output.errors) {
+    // Filter out warnings
+    const errors = output.errors.filter(
+      (error: { severity: string }) => error.severity === "error"
+    );
+    if (errors.length > 0) {
+      const error = new Error(errors[0].formattedMessage);
+      console.log(error);
+      throw error;
+    }
+  }
   const contract = output.contracts[fileName];
 
   // Get the contract ABI and bytecode
   const contractName = Object.keys(contract)[0];
   const abi = contract[contractName].abi;
   const bytecode = contract[contractName].evm.bytecode.object;
-  console.log("Compiling contract OK");
+  console.log("Compilation OK");
 
   // Prepare network, signer, and contract instance
+  const rpcUrl: string = chainData.rpc[0].replace(
+    "${INFURA_API_KEY}",
+    process.env.INFURA_API_KEY || ""
+  );
+
   const provider =
-    chainData.rpc[0] && chainData.chainId
+    rpcUrl && chainData.chainId
       ? new ethers.JsonRpcProvider(chainData.rpc[0], chainData.chainId)
       : ethers.getDefaultProvider(chainData.chainId);
-  console.log("Provider OK");
+  if (!(await provider.getNetwork())?.chainId) {
+    const error = new Error(`Provider for chain ${chainData.name} not available`);
+    console.log(error);
+    throw error;
+  }
+  console.log(`Provider for chain ${chainData.name} OK`);
+
   const signer = new ethers.Wallet("0x" + process.env.PRIVATE_KEY, provider);
-  console.log("Signer OK");
+  if (!(await signer.getAddress())) {
+    const error = new Error(`Signer for chain ${chainData.name} not available`);
+    console.log(error);
+    throw error;
+  }
+  console.log(`Signer for chain ${chainData.name} OK`);
 
   const ContractFactory = new ethers.ContractFactory(abi, bytecode, signer);
 
-  // Gas estimation TODO: dynamic gas estimation based on the network
-  const EIP1559 = chainData.features?.find((item) => item.name === "EIP1559") ? true : false;
-  console.log("EIP1559:", EIP1559);
-  const gasFeeData = await provider.getFeeData();
-  console.log("Gas fee data: ", gasFeeData);
-  const gasOptions = EIP1559
-    ? {
-        maxFeePerGas: gasFeeData.maxFeePerGas,
-        maxPriorityFeePerGas: gasFeeData.maxPriorityFeePerGas,
-      }
-    : { gasPrice: gasFeeData.gasPrice };
+  // Gas estimation TODO: dynamic gasLimit estimation
+  // const EIP1559 = chainData.features?.find((item) => item.name === "EIP1559") ? true : false;
+  // const gasFeeData = await provider.getFeeData();
+  // const gasOptions = EIP1559
+  //   ? {
+  //       maxFeePerGas: gasFeeData.maxFeePerGas,
+  //       maxPriorityFeePerGas: gasFeeData.maxPriorityFeePerGas,
+  //     }
+  //   : { gasPrice: gasFeeData.gasPrice };
 
-  // const simulateTxLegacy = await ContractFactory.getDeployTransaction({
-  //   ...gasOptionsLegacy,
-  // });
-  // const simulateTxEIP1559 = await ContractFactory.getDeployTransaction({
-  //   ...gasOptionsEIP1559,
-  // });
-
-  console.log("SimulateTx OK");
-  //const estimatedGas = await estimateGasOnMainnet(simulateTxEIP1559);
   const estimatedGas = 7000000n;
 
   // Deploy the contract
   const contractDeployment = await ContractFactory.deploy({
     gasLimit: estimatedGas,
-    gasOptions,
+    //gasOptions,
   });
-  console.log("Contract deployment OK");
   const deployTx = await contractDeployment.deploymentTransaction();
-  console.log("DeployTx hash: ", deployTx?.hash);
-  const deployedReceipt = await deployTx?.wait();
-  const contractAddress = deployedReceipt?.contractAddress;
-  console.log("Contract address: ", contractAddress);
+  const { contractAddress } = (await deployTx?.wait()) || {};
 
   if (!contractAddress) {
-    return new Error("Contract deployment failed");
+    const error = new Error("Contract deployment failed");
+    console.log(error);
+    throw error;
   }
   createContract({ name, address: contractAddress, chain, sourceCode });
 
-  return { name, address: contractAddress, chain, sourceCode };
+  const explorerUrl = `${chainData?.explorers?.[0].url}/address/${contractAddress}`;
+
+  const deploymentData = { name, chain, contractAddress, explorerUrl };
+  console.log(`Deployment data: `, deploymentData);
+  return deploymentData;
 };
