# public/openapi.yaml
@@ -104,15 +104,17 @@ components:
       type: object
       required:
         - name
-        - chain
+        - chains
         - sourceCode
       properties:
         name:
           type: string
           description: The name of the contract.
-        chain:
-          type: string
-          description: The blockchain network of the contract.
+        chains:
+          type: array
+          items:
+            type: string
+          description: The blockchain networks of the contract.
         sourceCode:
           type: string
           description: The source code of the contract.
